AC_INIT

dnl work out who the cpu, vendor and OS are
AC_CANONICAL_SYSTEM
AC_DEFINE_UNQUOTED(CPU_VENDOR_OS, "$target")

dnl Programs

AC_PROG_CC

AC_PATH_PROG(ERL, erl, erl)
AC_PATH_PROG(ERLC, erlc, erlc)

ERLDIR=`awk -F= '/ROOTDIR=/ { print [$]2; exit; }' $ERL`
AC_SUBST(ERLDIR)

dnl C header files

AC_CHECK_HEADERS(linux/if_tun.h, HAVE_TUNTAP="true")

dnl For the Slang driver. I don't think this is really currect just now..

AC_ARG_WITH(slang-include, [  --with-slang-include=DIR   installed slang library],
    if test "X$withval" != X; then
      HAVE_SLANG="true"
    fi
    )

AC_CHECK_HEADERS(slang.h, HAVE_SLANG="true")

AC_SUBST(SLANG_INCLUDE)

case "$target_os" in
     *cygwin*)
	:
	dnl fix this later
	;;
      linux*)
	AC_DEFINE(LINUX)
	LD_SHARED="ld -shared"
	;;
      *bsd*)
	AC_DEFINE(BSD)
        LD_SHARED="ld -Bshareable"
	;;
      *solaris*)
        AC_DEFINE(SOLARIS)
        LD_SHARED="ld -G"
	;;
      *)
        LD_SHARED="ld -shared"
	;;
esac

AC_SUBST(LD_SHARED)

dnl Skip applications that won't build, after cleaning out old SKIP
dnl files. Totally empty SKIP files we leave alone -- we don't create
dnl them, but the user can.

for f in ../lib/*/SKIP; do
  if test -s $f; then rm $f; fi
done

if test -z $HAVE_TUNTAP; then
   echo "No tunnel linux/if_tun.h" > ../lib/tuntap/SKIP
fi

if test -z $HAVE_SLANG; then
   echo "No Slang header files" > ../lib/slang/SKIP
fi

dnl End.

AC_OUTPUT(../support/include.mk)

